# fungus

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  catalogo_setas.xlsx  catalogo_setas_v2.xlsx  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
.claude/: settings.local.json
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/versions/: 003_weather_cache.py  004_weather_cache_init.py
backend/app/: config.py  database.py  main.py
backend/app/connectors/: __init__.py  base.py  open_meteo.py
backend/app/models/: __init__.py  climate_history.py  scores_cache.py  species.py  weather_cache.py  weather_station.py  zone.py
backend/app/routers/: health.py  species.py  weather.py  zones.py
backend/app/schemas/: health.py  species.py  zone.py
backend/app/services/: ingest.py  scoring.py  weather_cache.py
backend/migrations/: 004_synonyms_data.sql  005_auth_users.md  005_confusions_data.sql  006_confusions_amanitaceae.sql  006_favorites_zones.md  007_confusions_cantharellaceae.sql  007_favorites_species.md  008_confusions_russulaceae.sql  009_confusions_cortinariaceae.sql  010_confusions_agaricus_campestris.sql  011_confusions_neoboletus_luridiformis.sql  012_confusions_amanita_gemmata.sql  013_common_names_i18n.sql  014_descriptions_boletaceae.sql  env.py
backend/migrations/versions/: 001_initial_schema.py  002_zone_description.py  003_weather_cache.py  004_taxonomy_synonyms.py  005_confusions.py
backend/scripts/: backfill.py  seed_catalog.py
(+173 files in other folders)
