[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fungus-api"
version = "4.1.0"
description = "Backend API para Fungus — predicción micológica para España"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Base de datos
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    # Validación y settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # HTTP cliente (llamadas a Open-Meteo, AEMET, Meteocat…)
    "httpx>=0.27.0",
    # Scheduler (cron de ingesta diaria)
    "apscheduler>=3.10.4",
    # Utilidades
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",       # reintentos con backoff en conectores
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
